--- a/scss/blocks/_cta.scss
+++ b/scss/blocks/_cta.scss
@@ -1,6 +1,6 @@
 .cta {
 	padding: 180px 0;
-	background: linear-gradient(180deg, #242B33 10.42%, rgba(36, 43, 51, 0) 50.52%, #242B33 90.1%), linear-gradient(0deg, rgba(36, 43, 51, 0.9), rgba(36, 43, 51, 0.9)), url('/img/cta/cta-bg.jpg'), #C4C4C4;
+	background: linear-gradient(180deg, #242B33 10.42%, rgba(36, 43, 51, 0) 50.52%, #242B33 90.1%), linear-gradient(0deg, rgba(36, 43, 51, 0.9), rgba(36, 43, 51, 0.9)), url('../img/cta/cta-bg.jpg'), #C4C4C4;
 
 	@include mediaTablet {
 		padding: 80px 0;
