--- a/scss/blocks/_yandex-map.scss
+++ b/scss/blocks/_yandex-map.scss
@@ -39,7 +39,7 @@
 }
 
 [class*="balloon__close-button"] {
-	background: url('/img/map/cross.svg') 50% no-repeat !important; 
+	background: url('../img/map/cross.svg') 50% no-repeat !important; 
 	width: 12px !important;
 	height: 12px !important;
 	margin: 10px 7px;
